--- a/src/Smartstore.Web/Views/Shared/Components/CheckoutProgress/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/CheckoutProgress/Default.cshtml
@@ -3,7 +3,8 @@
 @model List<CheckoutProgressStepModel>
 
 @{
-    var colClass = Model.Count > 3 ? "col-2" : "col-4";
+    // 2:16.6% 3:25% 4:33.3%
+    var cols = Model.Count == 4 ? 3 : (Model.Count >= 5 ? 2 : 4);
 }
 
 <zone name="checkout_steps_before" />
@@ -11,7 +12,7 @@
 <div class="costeps row g-0 mx-auto">
     @foreach (var step in Model)
     {
-        <div class="costep @colClass @step.StateClass" data-step="@step.Name">
+        <div class="costep col-@cols @step.StateClass" data-step="@step.Name">
             <a class="costep-link@(step.Visited || step.Active ? string.Empty : " disabled")"
                 href="@(step.Visited || step.Active ? step.Url : "javascript:;")">
                 <i class="costep-icon"></i>
