--- a/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
@@ -95,7 +95,7 @@
                     </div>
 
                     <div class="buttons">
-                        <a asp-route="ShoppingCart" class="btn btn-secondary btn-lg">
+                        <a href="@Model.PreviousStepUrl" class="btn btn-secondary btn-lg">
                             <i class="fa fa-angle-left"></i>
                             <span>@T("Common.Back")</span>
                         </a>
