--- a/src/Smartstore.Web/Views/Checkout/ShippingAddress.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/ShippingAddress.cshtml
@@ -88,7 +88,7 @@
                     </div>
 
                     <div class="buttons">
-                        <a asp-action="BillingAddress" asp-controller="Checkout" class="btn btn-secondary btn-lg">
+                        <a href="@Model.PreviousStepUrl" class="btn btn-secondary btn-lg">
                             <i class="fa fa-angle-left"></i>
                             <span>@T("Common.Back")</span>
                         </a>
