--- a/src/Smartstore.Web/Views/Checkout/ShippingMethod.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/ShippingMethod.cshtml
@@ -80,7 +80,7 @@
 			}
 
             <div class="buttons">
-                <a asp-action="ShippingAddress" asp-controller="Checkout" class="btn btn-secondary btn-lg">
+                <a href="@Model.PreviousStepUrl" class="btn btn-secondary btn-lg">
                     <i class="fa fa-angle-left"></i>
                     <span>@T("Common.Back")</span>
                 </a>
