Essential specification attributes (in progress)

--- a/src/Smartstore.Web/Areas/Admin/Views/SpecificationAttribute/_Grid.SpecificationAttributes.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/SpecificationAttribute/_Grid.SpecificationAttributes.cshtml
@@ -48,10 +48,11 @@
             </display-template>
         </column>
         <column for="Alias" />
+        <column for="Essential" halign="center" />
         <column for="NumberOfOptions" halign="center" sortable="false" readonly="true" format="{0:N0}" />
+        <column for="DisplayOrder" halign="center" />
         <column for="AllowFiltering" halign="center" />
         <column for="ShowOnProductPage" halign="center" />
-        <column for="DisplayOrder" halign="center" />
         <column for="IndexOptionNames" halign="center" visible="false" />
         <column for="LocalizedFacetSorting" entity-member="FacetSorting" visible="false" />
         <column for="LocalizedFacetTemplateHint" entity-member="FacetTemplateHint" visible="false" />
